# hibiscus

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  hibiscus.postman_collection.json  pyproject.toml  pytest.ini  serve.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  agents.py  federated_registries.py  health.py  tokens.py  users.py
app/core/: __init__.py  auth.py
app/db/: __init__.py  client.py  schema.py
app/models/: __init__.py  schemas.py
app/utils/: __init__.py  did_utils.py  key_encryption.py  search_utils.py  supabase_utils.py  typesense_utils.py
backend/: .env  .env.example  Dockerfile  README.md  api_client.py  auth.py  cli.py  db.py  federation.py  init_db.py  main.py  pyproject.toml  schemas.py  serve.py
backend/app/: main.py
backend/app/api/routes/: agents.py  federated_registries.py  health.py  tokens.py
backend/app/core/: auth.py
backend/app/db/: client.py  schema.py
backend/app/models/: schemas.py
backend/app/services/: agent_service.py  agent_verification_service.py  federation.py
backend/app/utils/: did_utils.py  supabase_utils.py
backend/scripts/: create_admin.py  init_db.py
backend/test/: conftest.py  pytest.ini
backend/test/api/: test_agents.py  test_federated_registries.py  test_health.py  test_tokens_coverage.py
backend/test/core/: test_auth.py
backend/test/db/: test_db_client.py
backend/test/utils/: test_did_utils.py
examples/agno/: agno_example.py
examples/crew_ai/: crewai_eexample.py
examples/langchain/: sample.py
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
hibiscus/: __init__.py  hibiscus.py
hibiscus/server/: router.py  serve.py
hibiscus/settings/: settings.py
hibiscus/utils/: utils.py
scripts/: create_admin.py  init_db.py
test/: conftest.py  pytest.ini  test_main.py
test/api/: test_agent_verification.py  test_agents.py  test_federated_registries.py  test_federated_registries_coverage.py  test_health.py  test_tokens_coverage.py  test_users.py
test/core/: test_auth.py
test/db/: test_db_client.py  test_db_verification.py
test/utils/: test_did_utils.py  test_key_encryption.py
